fixed issue with types

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist --target node",
+    "build": "bun run tsc && bun build ./src/index.ts --outdir ./dist --target node",
     "npm:publish:dry": "bun run npm publish --dry-run --access=public",
     "npm:publish": "bun run npm publish --access=public",
     "test": "bun test",
