--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@asleepace/try",
   "version": "0.1.2",
   "description": "TypeScript utilities for error handling.",
+  "keywords": ["try", "catch", "helper", "error", "handling", "utility", "asleepace", "isomorphic", "ergonomic"],
   "author": "Colin Teahan",
   "license": "MIT",
   "type": "module",
